// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployeeAgendaSearchComponent matches snapshot when CDO 1`] = `
<div>
  Panel Meeting Search Page
  <div>
    Headers/Filters TBD isCDO: 
    yes CDO
  </div>
  <div
    className="panel-results-controls-right"
  >
    <div
      className="panel-results-controls"
    >
      <SelectForm
        className="panel-results-select"
        defaultSort="meeting_date"
        disabled={false}
        emptyOptionText="- Select -"
        id="panel-search-results-sort"
        includeFirstEmptyOption={false}
        label="Sort by:"
        labelSrOnly={false}
        onSelectOption={[Function]}
        options={
          Array [
            Object {
              "text": "Meeting Date Asc.",
              "value": "meeting_date",
            },
            Object {
              "text": "Meeting Date Desc.",
              "value": "-meeting_date",
            },
            Object {
              "text": "Meeting Status A-Z",
              "value": "meeting_status",
            },
            Object {
              "text": "Meeting Status Z-A",
              "value": "-meeting_status",
            },
          ]
        }
        transformValue={[Function]}
      />
      <SelectForm
        className="panel-results-select"
        defaultSort={25}
        disabled={false}
        emptyOptionText="- Select -"
        id="panel-search-num-results"
        includeFirstEmptyOption={false}
        label="Results:"
        labelSrOnly={false}
        onSelectOption={[Function]}
        options={
          Array [
            Object {
              "text": "5",
              "value": 5,
            },
            Object {
              "text": "10",
              "value": 10,
            },
            Object {
              "text": "25",
              "value": 25,
            },
            Object {
              "text": "50",
              "value": 50,
            },
            Object {
              "text": "100",
              "value": 100,
            },
          ]
        }
        transformValue={[Function]}
      />
      <div
        className="export-button-container"
      >
        <ExportButton
          className=""
          isLoading={false}
          onClick={[Function]}
          primaryClass="usa-button-secondary"
          text="Export"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EmployeeAgendaSearchComponent matches snapshot when not CDO 1`] = `
<div>
  Panel Meeting Search Page
  <div>
    Headers/Filters TBD isCDO: 
    no AO
  </div>
  <div
    className="panel-results-controls-right"
  >
    <div
      className="panel-results-controls"
    >
      <SelectForm
        className="panel-results-select"
        defaultSort="meeting_date"
        disabled={false}
        emptyOptionText="- Select -"
        id="panel-search-results-sort"
        includeFirstEmptyOption={false}
        label="Sort by:"
        labelSrOnly={false}
        onSelectOption={[Function]}
        options={
          Array [
            Object {
              "text": "Meeting Date Asc.",
              "value": "meeting_date",
            },
            Object {
              "text": "Meeting Date Desc.",
              "value": "-meeting_date",
            },
            Object {
              "text": "Meeting Status A-Z",
              "value": "meeting_status",
            },
            Object {
              "text": "Meeting Status Z-A",
              "value": "-meeting_status",
            },
          ]
        }
        transformValue={[Function]}
      />
      <SelectForm
        className="panel-results-select"
        defaultSort={25}
        disabled={false}
        emptyOptionText="- Select -"
        id="panel-search-num-results"
        includeFirstEmptyOption={false}
        label="Results:"
        labelSrOnly={false}
        onSelectOption={[Function]}
        options={
          Array [
            Object {
              "text": "5",
              "value": 5,
            },
            Object {
              "text": "10",
              "value": 10,
            },
            Object {
              "text": "25",
              "value": 25,
            },
            Object {
              "text": "50",
              "value": 50,
            },
            Object {
              "text": "100",
              "value": 100,
            },
          ]
        }
        transformValue={[Function]}
      />
      <div
        className="export-button-container"
      >
        <ExportButton
          className=""
          isLoading={false}
          onClick={[Function]}
          primaryClass="usa-button-secondary"
          text="Export"
        />
      </div>
    </div>
  </div>
</div>
`;
